# aws-firewall-proxy

./: .gitignore  Makefile  README.md  pyproject.toml
benchmark/: README.md  run.py
common/: cloudwatch.py  ssm.py  tf_outputs.py
docker/nginx/: Dockerfile  (+2 more)
docs/: SNI Spoofing Abuse Research Plan.md  backlog.md  bypass-vectors.md  certificate-validation-probe-tradeoffs.md  cleanup-tasks.md  issues_and_notes.md  lambda-ip-fallback-tasks.md  observability-v3.md  observability.md  override-async-alert-proxy.md  product.md  production-grade-plan.md  scaling-in-production.md  shared-dns-cache-tasks.md  shared-dns-cache.md  testing.md
monitoring/: README.md
steering/: backlog.md  bypass-vectors.md  http-support-backlog.md  product.md  production-grade-plan.md
terraform/: .terraform.lock.hcl  appconfig.tf  dns_firewall.tf  dns_resolver.tf  dns_server.tf  dns_vpc.tf  envoy_proxy.tf  firewall.tf  lambda_ruleset_generator.tf  main.tf  nginx_allowlist.tf  nginx_proxy.tf  observability.tf  outputs.tf  peering.tf  routes.tf  ruleset_generator_moved.tf  sni_spoofing_detector.tf  ssm.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf  workload.tf
tests/: README.md  conftest.py  proxy-runtime-placeholder.md  pyproject.toml  sni-spoofing-placeholder.md  test_appconfig_policy_schema.py  test_policy_enforcement.py  test_proxy_metrics.py  test_proxy_runtime.py  test_proxy_up.py  test_ruleset_generator.py  test_sni_spoofing.py  test_sni_spoofing_detector.py  test_terraform_static.py  test_workload_baseline.py
tests/helpers/: tf_outputs.py
utils/: nuke-config.yaml
(+61 files in other folders)
