[project]
name = "aws-firewall-proxy"
version = "0.1.0"
description = "Shared helpers (SSM, terraform outputs) for tests and benchmarks."
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "jsonschema>=4"]
benchmark = []

[tool.setuptools.packages.find]
include = ["common*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
